--- a/CSS/index.html
+++ b/CSS/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Grid</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>How are you doing guys</h1>
+    <h1 class="tuaalecororzila">How are you doing guys</h1>
     
    
 </body>
