--- a/JS Exercises/index.html
+++ b/JS Exercises/index.html
@@ -6,8 +6,8 @@
   <title>javaScript Exercise 1</title>
 </head>
 <body>
-  
-<script src="./Exercise1.js"></script>
+
+<script src="./Exercises.js"></script>
 
 </body>
 </html>
